2003-09-10  Larry Ewing  <lewing@ximian.com>

	* htmlstyle.c (html_style_add_attribute): add some new atttributes
	to the attribute parsing code.
	(html_style_add_attribute): fix accidental breakage.

	* htmlengine.c: refactor the inline parsers to use html_element
	code.

2003-09-06  Larry Ewing  <lewing@ximian.com>

	* htmltablecell.c (save): use the right tag when closing cells
	(original patch by Roy Rankin).

2003-09-05  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (pop_element_by_type): add new pop element variant
	that takes the display type as an argument.  This cleans up the
	places where we use pop_element to restructure the document as
	little more.

2003-09-05  Antonio Xu  <antonio.xu@sun.com>

	* gtkhtml.c (new_obj_from_uri): Use HTML_IS_PLAIN_PAINTER to judge
	html edit model, and use g_filename_from_uri to get the image file's
	real path, fix bug #47988 #47990.

2003-09-04  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (current_font_style): optimize this a little and
	don't traverse above table cells when looking for the font style
	(this happens a lot and we might be deep in a table).

	* htmlstyle.c: add html_style_set_display.
	
	* htmlstyle.h: add html_style_set_display prototype and
	HTMLDisplayType enum.
	
	* htmlengine.c: add style display type and move from using the id
	to using the display type for document fixups and style lookups.
	Remove the level setting as well and only use the display style.

2003-09-03  Dan Winship  <danw@ximian.com>

	* Makefile.am (testgtkhtml_LDFLAGS): Remove -static again

2003-09-02  Maxx Cao  <maxx.cao@sun.com>
	* gtkhtml.c (focus): reset selection when focus moved
	(move_selection):  add consideration for caret mode
	(command): handle selection command for caret mode
	* htmlengine-edit-cursor.c (clip_cursor): fixed some calculation
	error
	* htmlengine-edit.c (html_engine_set_mark): consider caret mode
	* htmlengine.c (html_engine_draw_real): consider caret mode